--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/svg+xml" href="/imgs/favicon.svg" />
+  <meta name="keywords" content="Component Tailwind HTML, cards, forms, table, list, carousel, slideshow">
+  <meta name="description" content="It has a set of accessible and reusable components that are commonly used in web applications">
+  <title>C Module Prebuilt Tailwind Components</title>
   <title>Tailwind Css</title>
   <link href="/icons/boxicons.min.css?v=1" rel="stylesheet">
   <script src="/icons/boxicons.js?v=1"></script>
@@ -175,8 +178,7 @@
                   <h1 class="font-semibold text-3xl mb-4">C Module Simple From The Most Basic Things</h1>
                   <h2 class="font-light text-2xl mb-4">Prebuilt Tailwind Components</h2>
                   <p class="mb-4 text-center max-w-md">It has a set of accessible and reusable components that are commonly used in
-                    web
-                    applications.</p>
+                    web applications.</p>
                   <a class="text-blue-500" href="https://tailwindcss.com/docs/installation" target="_blank">
                     Install Tailwind
                   </a>
