--- a/tables.html
+++ b/tables.html
@@ -3,9 +3,11 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Tailwind Css</title>
+  <link rel="icon" type="image/svg+xml" href="/imgs/favicon.svg" />
+  <meta name="keywords" content="Component Tailwind HTML, cards, forms, table, list, carousel, slideshow">
+  <meta name="description" content="It has a set of accessible and reusable components that are commonly used in web applications">
+  <title>C Module Prebuilt Tailwind Components</title>
   <link href="/icons/boxicons.min.css?v=1" rel="stylesheet">
   <script src="/icons/boxicons.js?v=1"></script>
 <script type="module" crossorigin src="/assets/tables.52561c60.js"></script>
