--- a/slideshow.html
+++ b/slideshow.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" type="image/svg+xml" href="/imgs/favicon.svg" />
+  <link rel="icon" type="image/svg+xml" href="/imgs/favicon.ico" />
   <meta name="keywords" content="Component Tailwind HTML, cards, forms, table, list, carousel, slideshow">
   <meta name="description" content="It has a set of accessible and reusable components that are commonly used in web applications">
   <title>C Module Prebuilt Tailwind Components</title>
