--- a/list.html
+++ b/list.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/svg+xml" href="/imgs/favicon.ico" />
+  <meta name="author" content="kimthiendung@gmail.com">
   <meta name="keywords" content="Component Tailwind HTML, cards, forms, table, list, carousel, slideshow">
   <meta name="description" content="It has a set of accessible and reusable components that are commonly used in web applications">
   <title>C Module Prebuilt Tailwind Components</title>
@@ -135,7 +136,7 @@
               href="#"
             >
               <box-icon name="user-circle" type="solid" color="currentColor"></box-icon>
-              <span class="ml-2 text-sm font-medium">Account</span>
+              <span class="ml-2 text-sm font-medium">kimthiendung@gmail.com</span>
             </a>
           </div>
         </div>
